--- a/index.html
+++ b/index.html
@@ -9,6 +9,151 @@
     <title>Atsiskaitymas</title>
 </head>
 <body>
+    <div class="all">
+    <nav>
+     <img class="logo" src="assets/logo.svg" alt=logo"> <div class="menu">
+    <button><img class="menu-logo" src="assets/menu.png" alt="menu"></button>
+    
+        <ul>
+        <li><a href="google.com">Features</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Launch</a></li>
+        <li><a href="#">Sign Up</a></li>
+    </ul>
+    </div>
+    </nav>
+    <div class="content1">
+    <div class="text1">
+   <h1 class="font1">Launching Soon</h1>
+   <h1 class="font2">An NFT like no other</h1>
+   <p class="textp">Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
+   <button class="signup">Sign Up</button>
+</div>
+   <img class="big-img" src="assets/graphic.svg" alt="graphic">
+    </div>
+    <div class="colorful">
+    <h1 class="mainh1">Free NFT for early birds</h1> 
+    <p class="mainp">Sign up today and you'll get free NFT when we launch.</p>   
+    </div>
+    <div class="logos">
+        <img src="assets/companies/1.svg" alt="1">
+        <img src="assets/companies/2.svg" alt="2">
+        <img src="assets/companies/3.svg" alt="3">
+        <img src="assets/companies/4.svg" alt="4">
+        <img src="assets/companies/5.svg" alt="5">
+    </div>
+    <div class="text2">
+        <h1 class="mainh1">LE Super Rare Auction</h1>
+        <p class="mainp">We have released four limited edition NFTs early which can be bid on via</p>
+        <a href="#">OpenSea</a>
+    </div>
+        <div class="card-row">
+        <div class="card">
+            <img class="card-img" src="assets/ntfs/ntf-1.svg" alt="nft1">
+        <div class="card-text">
+        <div class="left-side">
+            <h1 class="card-font1">Gloop Series</h1>
+            <h1 class="card-font2">Purple Man</h1>
+            <h1 class="card-font3">#12983</h1>
+        </div>
+        <div class="right-side">
+            <h1 class="card-font3">TOP BID</h1>
+            <h1 class="card-font2"><img class="eth" src="assets/eth.svg" alt="eth"> 2.99eth</h1>
+            <h1 class="card-font3">1 day left</h1>
+        </div>
+    </div>
+        </div>
+        <div class="card">
+            <img class="card-img" src="assets/ntfs/ntf-1.svg" alt="nft1">
+        <div class="card-text">
+        <div class="left-side">
+            <h1 class="card-font1">Gloop Series</h1>
+            <h1 class="card-font2">Purple Man</h1>
+            <h1 class="card-font3">#12983</h1>
+        </div>
+        <div class="right-side">
+            <h1 class="card-font3">TOP BID</h1>
+            <h1 class="card-font2"><img class="eth" src="assets/eth.svg" alt="eth"> 2.99eth</h1>
+            <h1 class="card-font3">1 day left</h1>
+        </div>
+    </div>
+        </div>
+        <div class="card">
+            <img class="card-img" src="assets/ntfs/ntf-1.svg" alt="nft1">
+        <div class="card-text">
+        <div class="left-side">
+            <h1 class="card-font1">Gloop Series</h1>
+            <h1 class="card-font2">Purple Man</h1>
+            <h1 class="card-font3">#12983</h1>
+        </div>
+        <div class="right-side">
+            <h1 class="card-font3">TOP BID</h1>
+            <h1 class="card-font2"><img class="eth" src="assets/eth.svg" alt="eth"> 2.99eth</h1>
+            <h1 class="card-font3">1 day left</h1>
+        </div>
+    </div>
+        </div>
+        <div class="card">
+            <img class="card-img" src="assets/ntfs/ntf-1.svg" alt="nft1">
+        <div class="card-text">
+        <div class="left-side">
+            <h1 class="card-font1">Gloop Series</h1>
+            <h1 class="card-font2">Purple Man</h1>
+            <h1 class="card-font3">#12983</h1>
+        </div>
+        <div class="right-side">
+            <h1 class="card-font3">TOP BID</h1>
+            <h1 class="card-font2"><img class="eth" src="assets/eth.svg" alt="eth"> 2.99eth</h1>
+            <h1 class="card-font3">1 day left</h1>
+        </div>
+    </div>
+        </div>
+    </div>
+    <div class="content1">
+        <div class="text1">
+       <h1 class="font1">Launching Soon</h1>
+       <h1 class="font2">An NFT like no other</h1>
+       <p class="textp">Don't miss out on the release of our new NFT. Sing up below to recieve updates</p>
+       <button class="signup">Sign Up</button>
+    </div>
+       <img class="big-img" src="assets/graphic2.svg" alt="graphic2">
+        </div>
+    <div class="footer">
+        <div class="botinfo">
+        <img class="footlogo" src="assets/logo.svg" alt="logo">
+        <p class="textp">Exclusive NFT Colection</p>
+        <button><img class="icon" src="assets/icons/facebook.png" alt="fb"></button>
+        <button><img class="icon" src="assets/icons/instagram.png" alt="ig">
+        <button><img class="icon" src="assets/icons/tik-tok.png" alt="tt"></button>
+        <button><img class="icon" src="assets/icons/twitter.png" alt="tw"></button>
+    </div>
+        <div class="botlist">
+        <div class="col">
+            <h1>About</h1>
+            <a href="#">About</a>
+            <a href="#">Terms</a>
+            <a href="#">Legal</a>
+        </div>
+        <div class="col">
+            <h1>NFT</h1>
+            <a href="#">OpenSea</a>
+            <a href="#">Maker</a>
+            <a href="#">Learn</a>
+        </div>
+        <div class="col">
+            <h1>Contact</h1>
+            <a href="#">Press</a>
+            <a href="#">Support</a>
+        </div>
+        <div class="col">
+            <h1>About</h1>
+            <a href="#">Twitter</a>
+            <a href="#">Instagram</a>
+        </div>
+        <p>Copyright 2022 NFTlanding</p>  
+        </div>
+
+</div>
     
 </body>
 </html>
