--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="google.com">Features</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Launch</a></li>
-        <li><a href="#">Sign Up</a></li>
+        <li><a href="#"><span>Sign Up</span></a></li>
     </ul>
     </div>
     </nav>
